# GitNotifyBot_bot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  logging.py
app/application/: chat_settings.py  file_worker.py  release_worker.py  subscriptions.py
app/bot/: __init__.py  __main__.py  handlers.py  keyboards.py
app/domain/: __init__.py  enums.py  github.py
app/integrations/github/: __init__.py  client.py
app/integrations/llm/: file_summarizer.py  openai_client.py  prompt_loader.py  release_summarizer.py  schemas.py
app/prompts/: github_update_summary.v1.yaml
app/storage/: base.py  models.py  session.py
app/storage/migrations/: env.py
app/storage/migrations/versions/: 0001_initial_schema.py
app/worker/: __main__.py
docs/superpowers/plans/: 2026-05-04-gitnotifybot-foundation.md
docs/superpowers/specs/: 2026-05-04-gitnotifybot-design.md
tests/: test_bot_handlers.py  test_bot_keyboards.py  test_chat_settings.py  test_config.py  test_file_worker.py  test_github_domain.py  test_openai_client.py  test_prompt_loader.py  test_release_worker.py  test_storage_models.py  test_subscription_service.py
